--- a/.github/workflows/top.yml
+++ b/.github/workflows/top.yml
@@ -21,6 +21,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.prod-version }}
       uses: ./.github/workflows/node.js.yml
       with:
