--- a/.github/workflows/top.yml
+++ b/.github/workflows/top.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        prod-version: [prod1, prod2]
+        prod-version: ["prod1", "prod2"]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
