--- a/.github/workflows/top.yml
+++ b/.github/workflows/top.yml
@@ -18,8 +18,7 @@ jobs:
       name: Checkout
     - name: Use Node.js prod1
       uses: ./.github/workflows/build/
-      with:
-        depl-env: ${{ secrets.AZURE_TEST }}
+      secrets: inherit
   prod2:
 
     runs-on: ubuntu-latest
@@ -30,7 +29,6 @@ jobs:
       name: Checkout
     - name: Use Node.js prod1
       uses: ./.github/workflows/build/
-      with:
-        depl-env: ${{ secrets.AZURE_TEST }}
+      secrets: inherit
 
 
