--- a/.github/workflows/top.yml
+++ b/.github/workflows/top.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI
+name: "Node.js CI"
 
 on:
   pull_request:
@@ -9,28 +9,10 @@ on:
 
 jobs:
   prod1:
-
-    runs-on: ubuntu-latest
-    environment: prod1
-    
-    steps:
-    - uses: actions/checkout@master
-    - uses: ./.github/workflows/build/
-      with:
-        depl-env: ${{ secrets.AZURE_TEST }}
-      
-      
-  prod2:
-
-    runs-on: ubuntu-latest
-    environment: prod2
-
-    steps:
-    - uses: actions/checkout@master
-      name: Checkout
-    - name: Use Node.js prod2
-      uses: ./.github/workflows/build/
-      with:
-        depl-env: ${{ secrets.AZURE_TEST }}
-
-
+    strategy:
+        matrix:
+          target: [prod1, prod2]
+    uses: ./.github/workflows/build/action.yml
+    with:
+        environment: ${{ matrix.target }}
+    secrets: inherit
