--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,12 +2,12 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: "Custom build"
-description: "Test"
 on:
   workflow_call:
     inputs:
       environment:
         required: true
+        type: string
 
 jobs:
   
