--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
       name: ${{ inputs.environment }}
     steps:
     - uses: actions/checkout@master
-    - run: 'echo "$SEC"'
+    - run: echo "$SEC" | sed 's/./& /g
       shell: bash
       env:
         SEC: ${{ secrets.AZURE_TEST }}
